--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,7 +1,7 @@
 source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
-pod "cslim", :path => '../../ObjectiveCSlim/cslim', :branch => 'ocslim'
+pod "cslim", :git => 'https://github.com/paulstringer/cslim.git', :branch => 'ocslim'
 
 target 'CocoaSlim_AcceptanceTests', :exclusive => true do
   pod "CocoaSlim", :path => "../"
