--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
 language: objective-c
+podfile: Example
 xcode_workspace: Example/OCSlimProject.xcworkspace # path to your xcodeproj folder
 xcode_scheme: OCSlimProject_AcceptanceTests
