--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,19 @@
 language: objective-c
-podfile: Example
+cache: cocoapods
+podfile: Example/Podfile
 xcode_workspace: Example/OCSlimProject.xcworkspace # path to your xcodeproj folder
 xcode_scheme: OCSlimProject_AcceptanceTests
+
+
+## DEFAULT TEMPLATE REFERENCE 
+#language: objective-c
+# cache: cocoapods
+# podfile: Example/Podfile
+# before_install:
+# - gem install cocoapods # Since Travis is not always on latest version
+# - pod install --project-directory=Example
+#script:
+#- set -o pipefail && xcodebuild test -workspace Example/TravisTest.xcworkspace -scheme TravisTest-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
+#- pod lib lint
+
+
