--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: objective-c
 cache: cocoapods
 podfile: Example/Podfile
+before_install:
+- gem install cocoapods # Since Travis is not always on latest version
 xcode_workspace: Example/OCSlimProject.xcworkspace # path to your xcodeproj folder
 xcode_scheme: OCSlimProject_AcceptanceTests
 
