fitnesse-standalone.jar should not be committed because it can be downloaded from the FitNesse Page.

--- a/Example/.gitignore
+++ b/Example/.gitignore
@@ -1,3 +1,6 @@
+# FitNesse is not part of the project. Please download it from http://www.fitnesse.org/FitNesseDownload
+fitnesse-standalone.jar
+
 # Created by .ignore support plugin (hsz.mobi)
 ### Swift template
 # Xcode
