--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ cache: cocoapods
 podfile: Example/Podfile
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
+osx_image: xcode7.1
+xcode_sdk: iphonesimulator9.1
 xcode_workspace: Example/OCSlimProject.xcworkspace # path to your xcodeproj folder
 xcode_scheme: OCSlimProject_AcceptanceTests
 
