--- a/Xcode Templates/iOS Acceptance Tests.xctemplate/TemplateInfo.plist
+++ b/Xcode Templates/iOS Acceptance Tests.xctemplate/TemplateInfo.plist
@@ -74,7 +74,7 @@ fi
 
 # Copy Symbolic Link to LaunchFitnesse to Project Root
 if [ ! -f &quot;$LAUNCHFITNESSE_TARGET&quot; ]; then
-ln -s $LAUNCHFITNESSE_SOURCE $(dirname &quot;$LAUNCHFITNESSE_TARGET&quot;)
+ln -sf $LAUNCHFITNESSE_SOURCE $(dirname &quot;$LAUNCHFITNESSE_TARGET&quot;)
 fi</string>
 				</dict>
 			</array>
