Fixes Search Paths for iOS and Mac targets. Creates two clean new template based Targets

--- a/Xcode Templates/iOS Acceptance Tests.xctemplate/TemplateInfo.plist
+++ b/Xcode Templates/iOS Acceptance Tests.xctemplate/TemplateInfo.plist
@@ -15,6 +15,16 @@
 	</array>
 	<key>Concrete</key>
 	<true/>
+	<key>Targets</key>
+	<array>
+		<dict>
+			<key>SharedSettings</key>
+			<dict>
+				<key>LD_RUNPATH_SEARCH_PATHS</key>
+				<string>$(inherited) @executable_path/Frameworks</string>
+			</dict>
+		</dict>
+	</array>
 	<key>Nodes</key>
 	<array>
 		<string>Info.plist:iPhone</string>
