--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,11 +1,11 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
-target 'OCSlimProject_AcceptanceTests', :exclusive => true do
+target 'OCSlimProject_AcceptanceTests' do
   platform :ios, 8.0
   pod "OCSlimProject", :path => "../"
 end
 
-target 'OCSlimProject_AcceptanceTestsMac', :exclusive => true do
+target 'OCSlimProject_AcceptanceTestsMac' do
   platform :osx, 10.9
   pod "OCSlimProject", :path => "../"
 end
