--- a/Example/OCSlimProject.xcodeproj/xcshareddata/xcschemes/OCSlimProject_AcceptanceTests.xcscheme
+++ b/Example/OCSlimProject.xcodeproj/xcshareddata/xcschemes/OCSlimProject_AcceptanceTests.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0720"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -27,6 +27,24 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <PreActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "${OCSLIMPROJECT_BUNDLE_RESOURCES_DIR}/LaunchFitnesse -d ${PROJECT_DIR} --test OCSlimProjectExamplePage &gt; ${PROJECT_DIR}OCSlimProjectFitnesseTest.log">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "8CBAFE631D1A817D007D52D2"
+                     BuildableName = "OCSlimProject_FitnesseTests.xctest"
+                     BlueprintName = "OCSlimProject_FitnesseTests"
+                     ReferencedContainer = "container:OCSlimProject.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
+            </ActionContent>
+         </ExecutionAction>
+      </PreActions>
       <Testables>
          <TestableReference
             skipped = "NO">
