--- a/Example/OCSlimProject.xcodeproj/xcshareddata/xcschemes/OCSlimProject_AcceptanceTestsMac.xcscheme
+++ b/Example/OCSlimProject.xcodeproj/xcshareddata/xcschemes/OCSlimProject_AcceptanceTestsMac.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0720"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -27,7 +27,55 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <PreActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "${OCSLIMPROJECT_BUNDLE_RESOURCES_DIR}/LaunchFitnesse -d ${PROJECT_DIR} --test OCSlimProjectExamplePage  &gt; ${PROJECT_DIR}OCSlimProjectFitnesseTestsMac.log">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "8C07D1FF1C35388000CF88BE"
+                     BuildableName = "OCSlimProject_AcceptanceTestsMac.app"
+                     BlueprintName = "OCSlimProject_AcceptanceTestsMac"
+                     ReferencedContainer = "container:OCSlimProject.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
+            </ActionContent>
+         </ExecutionAction>
+      </PreActions>
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8CBAFE631D1A817D007D52D2"
+               BuildableName = "OCSlimProject_FitnesseTests.xctest"
+               BlueprintName = "OCSlimProject_FitnesseTests"
+               ReferencedContainer = "container:OCSlimProject.xcodeproj">
+            </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "FitnesseTestSuiteXMLResultParserTests">
+               </Test>
+               <Test
+                  Identifier = "OCSlimFitnesseTestReportReaderTests">
+               </Test>
+               <Test
+                  Identifier = "OCSlimProjectFitnesseTestMainTests">
+               </Test>
+               <Test
+                  Identifier = "OCSlimProjectJUnitTestAsserter">
+               </Test>
+               <Test
+                  Identifier = "OCSlimProjectJUnitTestAsserterTests">
+               </Test>
+               <Test
+                  Identifier = "OCSlimProjectTests">
+               </Test>
+            </SkippedTests>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
