--- a/Example/Podfile
+++ b/Example/Podfile
@@ -9,3 +9,8 @@ target 'OCSlimProject_AcceptanceTestsMac' do
   platform :osx, 10.9
   pod "OCSlimProject", :path => "../"
 end
+
+target 'OCSlimProject_FitnesseTests' do
+  use_frameworks!
+  pod "OCSlimProjectTestBundleSupport", :path => "../"
+end
