--- a/Example/OCSlimProject.xcodeproj/xcshareddata/xcschemes/OCSlimProject_AcceptanceTests.xcscheme
+++ b/Example/OCSlimProject.xcodeproj/xcshareddata/xcschemes/OCSlimProject_AcceptanceTests.xcscheme
@@ -1,44 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0720"
-   version = "1.7">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <PostActions>
-         <ExecutionAction
-            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
-            <ActionContent
-               title = "Run Script"
-               scriptText = "${OCSLIMPROJECT_BUNDLE_RESOURCES_DIR}/LaunchFitnesse -d &quot;${PROJECT_DIR}&quot; -b &quot;${PROJECT_DIR}/Fitnesse-Test-Report.xml&quot; --test &quot;OCSlimProjectExamplePage&quot; &gt; &quot;${PROJECT_DIR}/OCSlimProjectFitnesseTest.log&quot;">
-               <EnvironmentBuildable>
-                  <BuildableReference
-                     BuildableIdentifier = "primary"
-                     BlueprintIdentifier = "8C07D1EC1C35385100CF88BE"
-                     BuildableName = "OCSlimProject_AcceptanceTests.app"
-                     BlueprintName = "OCSlimProject_AcceptanceTests"
-                     ReferencedContainer = "container:OCSlimProject.xcodeproj">
-                  </BuildableReference>
-               </EnvironmentBuildable>
-            </ActionContent>
-         </ExecutionAction>
-         <ExecutionAction
-            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
-            <ActionContent
-               title = "Run Script"
-               scriptText = "mkdir -p &quot;${CONFIGURATION_BUILD_DIR}/${UNLOCALIZED_RESOURCES_FOLDER_PATH}&quot;&#10;mv &quot;$PROJECT_DIR/Fitnesse-Test-Report.xml&quot; &quot;${CONFIGURATION_BUILD_DIR}/${UNLOCALIZED_RESOURCES_FOLDER_PATH}/Fitnesse-Test-Report.xml&quot;">
-               <EnvironmentBuildable>
-                  <BuildableReference
-                     BuildableIdentifier = "primary"
-                     BlueprintIdentifier = "8CBAFE631D1A817D007D52D2"
-                     BuildableName = "OCSlimProject_FitnesseTests.xctest"
-                     BlueprintName = "OCSlimProject_FitnesseTests"
-                     ReferencedContainer = "container:OCSlimProject.xcodeproj">
-                  </BuildableReference>
-               </EnvironmentBuildable>
-            </ActionContent>
-         </ExecutionAction>
-      </PostActions>
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -62,6 +28,21 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8C634ECD1D37E39C00E95652"
+               BuildableName = "OCSlimProject_AcceptanceXCTests.xctest"
+               BlueprintName = "OCSlimProject_AcceptanceXCTests"
+               ReferencedContainer = "container:OCSlimProject.xcodeproj">
+            </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "OCSlimProject_AcceptanceXCTests">
+               </Test>
+            </SkippedTests>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
