Adds Mac Acceptance Tests (XC Test Bundle)

--- a/Example/OCSlimProject.xcodeproj/xcshareddata/xcschemes/OCSlimProject_AcceptanceTestsMac.xcscheme
+++ b/Example/OCSlimProject.xcodeproj/xcshareddata/xcschemes/OCSlimProject_AcceptanceTestsMac.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8CADF8F01D3958B900731FF5"
+               BuildableName = "OCSlimProject_AcceptanceXCTestsMac.xctest"
+               BlueprintName = "OCSlimProject_AcceptanceXCTestsMac"
+               ReferencedContainer = "container:OCSlimProject.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
