--- a/Xcode Templates/Base Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
+++ b/Xcode Templates/Base Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
@@ -2,19 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Name</key>
+	<string>Acceptance Unit Test Bundle</string>
 	<key>Kind</key>
 	<string>Xcode.Xcode3.ProjectTemplateUnitKind</string>
 	<key>Identifier</key>
-	<string>io.cleankit.acceptanceTestsUnitTestBundle</string>
+	<string>io.cleankit.baseAcceptanceTestsUnitTestBundle</string>
 	<key>Ancestors</key>
 	<array>
 		<string>com.apple.dt.unit.unitTestBundleBase</string>
-		<string>com.apple.dt.unit.osxBase</string>
 	</array>
-	<key>Concrete</key>
-	<true/>
 	<key>Description</key>
-	<string>This target builds a unit test bundle that generates test results using Fitnesse and reports them within Xcode using the XCTest framework.</string>
+	<string>This target builds a unit test bundle that generates results from your Acceptance Tests target using Fitnesse and then reports them within Xcode using the XCTest framework.</string>
 	<key>Targets</key>
 	<array>
 		<dict>
