--- a/Xcode Templates/Mac Acceptance Tests.xctemplate/TemplateInfo.plist
+++ b/Xcode Templates/Mac Acceptance Tests.xctemplate/TemplateInfo.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Name</key>
+	<string>Acceptance Tests</string>
 	<key>Kind</key>
 	<string>Xcode.Xcode3.ProjectTemplateUnitKind</string>
 	<key>Identifier</key>
