--- a/Xcode Templates/Mac Acceptance Tests.xctemplate/TemplateInfo.plist
+++ b/Xcode Templates/Mac Acceptance Tests.xctemplate/TemplateInfo.plist
@@ -9,7 +9,7 @@
 	<key>Identifier</key>
 	<string>io.cleankit.macAcceptanceTests</string>
 	<key>Description</key>
-	<string>This target builds a Mac Application for Acceptance Testing your App using the Fitnesse framework. Requires a project that uses CocoaPods.</string>
+	<string>This target builds an OS X Application for Acceptance Testing your App using the Fitnesse framework. Requires a project that uses CocoaPods.</string>
 	<key>Ancestors</key>
 	<array>
 		<string>io.cleankit.baseAcceptanceTests</string>
