--- a/Xcode Templates/Mac Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
+++ b/Xcode Templates/Mac Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
@@ -2,21 +2,37 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>Description</key>
-	<string>This target builds an OS X unit test bundle that generates results from your Acceptance Tests target using Fitnesse and then reports them within Xcode using the XCTest framework.</string>
-	<key>Name</key>
-	<string>Acceptance Unit Test Bundle</string>
 	<key>Kind</key>
 	<string>Xcode.Xcode3.ProjectTemplateUnitKind</string>
 	<key>Identifier</key>
-	<string>io.cleankit.osxAcceptanceTestsUnitTestBundle</string>
-	<key>Ancestors</key>
-	<array>
-		<string>io.cleankit.baseAcceptanceTestsUnitTestBundle</string>
-		<string>com.apple.dt.unit.osxBase</string>
-	</array>
+	<string>io.cleankit.acceptanceTestsUnitTestBundle</string>
+	<key>Name</key>
+	<string>Acceptance Unit Test Bundle</string>
+	<key>Description</key>
+	<string>This target builds an OS X unit test bundle that generates results from your Acceptance Tests target using Fitnesse and then reports them within Xcode using the XCTest framework.</string>
 	<key>Concrete</key>
 	<true/>
+	<key>Platforms</key>
+	<array>
+		<string>com.apple.platform.iphoneos</string>
+		<string>com.apple.platform.macosx</string>
+	</array>
+	<key>Project</key>
+	<dict>
+		<key>SDK</key>
+		<string>macosx</string>
+		<key>SharedSettings</key>
+		<dict>
+			<key>MACOSX_DEPLOYMENT_TARGET</key>
+			<string>___RUNNINGOSXVERSION___</string>
+			<key>CODE_SIGN_IDENTITY</key>
+			<string>-</string>
+		</dict>
+	</dict>
+	<key>Ancestors</key>
+	<array>
+		<string>com.apple.dt.unit.unitTestBundleBase</string>
+	</array>
 	<key>Targets</key>
 	<array>
 		<dict>
@@ -25,7 +41,88 @@
 				<key>LD_RUNPATH_SEARCH_PATHS</key>
 				<string>$(inherited) @executable_path/../Frameworks @loader_path/../Frameworks</string>
 			</dict>
+			<key>BuildPhases</key>
+			<array>
+				<dict>
+					<key>Class</key>
+					<string>ShellScript</string>
+					<key>ShellPath</key>
+					<string>/bin/sh</string>
+					<key>ShellScript</key>
+					<string>
+					
+REPORT_OUTPUT_FILE_PATH=&quot;${OCSLIMPROJECT_FITNESSE_TEST_REPORT_PATH}&quot;
+
+LOG_FILE_PATH=&quot;${PROJECT_DIR}/${TARGET_NAME}.log&quot;
+
+${PROJECT_DIR}/LaunchFitnesse -d &quot;${PROJECT_DIR}&quot; -b &quot;$REPORT_OUTPUT_FILE_PATH&quot; --test &quot;___VARIABLE_fitnesseSuiteName___&quot; &gt; &quot;$LOG_FILE_PATH&quot;
+
+					</string>
+				</dict>
+			</array>
 		</dict>
 	</array>
+	<key>Options</key>
+	<array>
+		<dict>
+			<key>Name</key>
+			<string>Fitnesse Suite Name</string>
+			<key>Identifier</key>
+			<string>fitnesseSuiteName</string>
+			<key>Description</key>
+			<string>Specify a specific Fitnesse Suite to target (or leave blank to run all)</string>
+			<key>Type</key>
+			<string>text</string>
+			<key>NotPersisted</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>Identifier</key>
+			<string>languageChoice</string>
+			<key>Units</key>
+			<dict>
+				<key>Objective-C</key>
+				<dict>
+					<key>Nodes</key>
+					<array>
+						<string>___PACKAGENAMEASIDENTIFIER___.m</string>
+					</array>
+					<key>Definitions</key>
+					<dict>
+						<key>___PACKAGENAMEASIDENTIFIER___.m</key>
+						<dict>
+							<key>Path</key>
+							<string>___PACKAGENAMEASIDENTIFIER___.m</string>
+						</dict>
+					</dict>
+				</dict>
+				<key>Swift</key>
+				<dict>
+					<key>Nodes</key>
+					<array>
+						<string>___PACKAGENAMEASIDENTIFIER___.swift</string>
+					</array>
+					<key>Definitions</key>
+					<dict>
+						<key>___PACKAGENAMEASIDENTIFIER___.swift</key>
+						<dict>
+							<key>Path</key>
+							<string>___PACKAGENAMEASIDENTIFIER___.swift</string>
+						</dict>
+					</dict>
+				</dict>
+			</dict>
+		</dict>
+	</array>
+	<key>Nodes</key>
+	<array>
+		<string>Info.plist:PrincipalClass</string>
+	</array>
+	<key>Definitions</key>
+	<dict>
+		<key>Info.plist:PrincipalClass</key>
+		<string>&lt;key&gt;NSPrincipalClass&lt;/key&gt;
+&lt;string&gt;OCSlimProjectFitnesseTestsMain&lt;/string&gt;</string>
+	</dict>
 </dict>
 </plist>
