--- a/Xcode Templates/iOS Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
+++ b/Xcode Templates/iOS Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
@@ -5,20 +5,20 @@
 	<key>Kind</key>
 	<string>Xcode.Xcode3.ProjectTemplateUnitKind</string>
 	<key>Identifier</key>
-	<string>io.cleankit.macAcceptanceTestsUnitTestBundle</string>
+	<string>io.cleankit.iOSAcceptanceTestsUnitTestBundle</string>
 	<key>Name</key>
 	<string>Acceptance Unit Test Bundle</string>
 	<key>Description</key>
-	<string>This target builds an OS X unit test bundle that generates results from your Acceptance Tests target using Fitnesse and then reports them within Xcode using the XCTest framework.</string>
+	<string>This target builds an iOS unit test bundle that generates results from your Acceptance Tests target using Fitnesse and then reports them within Xcode using the XCTest framework.</string>
 	<key>Concrete</key>
 	<true/>
 	<key>Platforms</key>
 	<array>
-		<string>com.apple.platform.macosx</string>
+		<string>com.apple.platform.iphoneos</string>
 	</array>
 	<key>Ancestors</key>
 	<array>
-		<string>com.apple.dt.unit.osxBase</string>
+		<string>com.apple.dt.unit.iosBase</string>
 		<string>io.cleankit.baseAcceptanceTestsUnitTestBundle</string>
 	</array>
 	<key>Targets</key>
@@ -27,7 +27,7 @@
 			<key>SharedSettings</key>
 			<dict>
 				<key>LD_RUNPATH_SEARCH_PATHS</key>
-				<string>$(inherited) @executable_path/../Frameworks @loader_path/../Frameworks</string>
+				<string>$(inherited) @executable_path/Frameworks @loader_path/Frameworks</string>
 			</dict>
 		</dict>
 	</array>
