Adds platform property to Podfile snippets. Simplifies the gcc error message to not include the entire Podfile snippet

--- a/Xcode Templates/Base Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
+++ b/Xcode Templates/Base Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
@@ -6,6 +6,8 @@
 	<true/>
 	<key>Macros</key>
 	<dict>
+		<key>POD_PLATFORM_IDENTIFIER</key>
+		<string>___POD_PLATFORM_IDENTIFIER___</string>
 		<key>OCSLIMPROJECTTESTBUNDLESUPPORTNAME</key>
 		<string>OCSlimProjectTestBundleSupport</string>
 		<key>OCSLIMPROJECTTESTBUNDLEPRINCIPALCLASS</key>
