Adds platform property to Podfile snippets. Simplifies the gcc error message to not include the entire Podfile snippet

--- a/Xcode Templates/Mac Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
+++ b/Xcode Templates/Mac Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Macros</key>
+	<dict>
+		<key>POD_PLATFORM</key>
+		<string>osx</string>
+	</dict>
 	<key>Kind</key>
 	<string>Xcode.Xcode3.ProjectTemplateUnitKind</string>
 	<key>Identifier</key>
