--- a/Xcode Templates/Base Acceptance Tests.xctemplate/TemplateInfo.plist
+++ b/Xcode Templates/Base Acceptance Tests.xctemplate/TemplateInfo.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Macros</key>
+	<dict>
+		<key>POD_NAME</key>
+		<string>OCSlimProject</string>
+		<key>POD_PLATFORM_IDENTIFIER</key>
+		<string>___POD_PLATFORM_IDENTIFIER___</string>
+	</dict>
 	<key>Kind</key>
 	<string>Xcode.Xcode3.ProjectTemplateUnitKind</string>
 	<key>Swift</key>
