--- a/Xcode Templates/Mac Acceptance Tests.xctemplate/TemplateInfo.plist
+++ b/Xcode Templates/Mac Acceptance Tests.xctemplate/TemplateInfo.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Macros</key>
+	<dict>
+		<key>POD_PLATFORM_IDENTIFIER</key>
+		<string>osx</string>
+	</dict>
 	<key>Name</key>
 	<string>Acceptance Tests</string>
 	<key>Kind</key>
