Names and identifies the Run Script phases as belonging to OCSP

--- a/Xcode Templates/Base Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
+++ b/Xcode Templates/Base Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
@@ -6,6 +6,8 @@
 	<true/>
 	<key>Macros</key>
 	<dict>
+		<key>POD_ABBREVIATION</key>
+		<string>OCSP</string>
 		<key>POD_PLATFORM_IDENTIFIER</key>
 		<string>___POD_PLATFORM_IDENTIFIER___</string>
 		<key>POD_NAME</key>
@@ -27,6 +29,8 @@
 			<key>BuildPhases</key>
 			<array>
 				<dict>
+					<key>Name</key>
+					<string>[___POD_ABBREVIATION___] Generate Fitnesse Test Report File</string>
 					<key>Class</key>
 					<string>ShellScript</string>
 					<key>ShellPath</key>
