--- a/Xcode Templates/Base Acceptance Tests.xctemplate/TemplateInfo.plist
+++ b/Xcode Templates/Base Acceptance Tests.xctemplate/TemplateInfo.plist
@@ -58,56 +58,7 @@
 					<key>ShellPath</key>
 					<string>/bin/sh</string>
 					<key>ShellScript</key>
-					<string># Validate Project Build Settings
-if [ -z &quot;${OCSLIMPROJECT_BUNDLE_RESOURCES_DIR}&quot; ]; then
-   echo &quot;Missing expected OCSlimProject build settings. Running &apos;$ pod update&apos; may fix this problem&quot;
-   exit 1
-fi
-
-# Export Build Environment to Bundle Location
-ENV_TARGET=${OCSLIMPROJECT_BUNDLE_RESOURCES_DIR}/env.sh
-
-function exportTestRunnerEnv {
-    mkdir -p &quot;$(dirname &quot;$ENV_TARGET&quot;)&quot; &amp;&amp; touch &quot;$ENV_TARGET&quot;
-    export | egrep &apos;(INSTALL_DIR)|(PRODUCT_NAME)|(TARGET_BUILD_DIR)|(EXECUTABLE_FOLDER_PATH)|(DEPLOYMENT_TARGET_SUGGESTED_VALUES)|(EXECUTABLE_PATH)&apos; &gt; $ENV_TARGET
-}
-
-# Write Test Runner Script To Project Root
-TESTRUNNER_SOURCE=${OCSLIMPROJECT_BUNDLE_RESOURCES_DIR}/RunTestsTargetWithSlimPort
-TESTRUNNER_TARGET=${PROJECT_DIR}/OCSlimProjectTestRunner.sh
-
-function writeTestRunnerScript {
-    
-    if [ -f &quot;$TESTRUNNER_TARGET&quot; ]; then
-        rm $TESTRUNNER_TARGET
-    fi
-    
-    echo &apos;#!/bin/sh&apos; &gt; $TESTRUNNER_TARGET
-    echo $TESTRUNNER_SOURCE &apos;$1&apos; &gt;&gt; $TESTRUNNER_TARGET
-    chmod +x $TESTRUNNER_TARGET
-    
-}
-
-# Symbolic Link LaunchFitnesse to Project Root
-LAUNCHFITNESSE_SCRIPTNAME=LaunchFitnesse
-LAUNCHFITNESSE_SOURCE=${OCSLIMPROJECT_BUNDLE_RESOURCES_DIR}/$LAUNCHFITNESSE_SCRIPTNAME
-LAUNCHFITNESSE_TARGET=${PROJECT_DIR}/$LAUNCHFITNESSE_SCRIPTNAME
-
-function linkFitnesseScript {
-    
-    if [ -L $LAUNCHFITNESSE_TARGET ]; then
-        unlink $LAUNCHFITNESSE_TARGET
-    fi
-    
-    ln -s $LAUNCHFITNESSE_SOURCE $(dirname &quot;$LAUNCHFITNESSE_TARGET&quot;)
-}
-
-
-###
-
-exportTestRunnerEnv
-writeTestRunnerScript
-linkFitnesseScript</string>
+					<string>&quot;${OCSP_SUPPORT_FILE_DIR}/ocsp-generate-fitnesse-test-system-scripts.sh&quot;</string>
 				</dict>
 			</array>
 		</dict>
