--- a/Xcode Templates/Base Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
+++ b/Xcode Templates/Base Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
@@ -37,7 +37,8 @@
 					<string>/bin/sh</string>
 					<key>ShellScript</key>
 					<string>FITNESSE_SUITE_NAME=&quot;___VARIABLE_fitnesseSuiteName___&quot;
-&quot;${OCSP_SUPPORT_FILE_DIR}/ocsp-generate-fitnesse-test-report.sh $FITNESSE_SUITE_NAME&quot;</string>
+					TEST_REPORT_FILE_PATH=&quot;${OCSP_TEST_REPORT_FILE_PATH}&quot;
+					${OCSP_SUPPORT_FILE_DIR}/ocsp-generate-fitnesse-test-report.sh $FITNESSE_SUITE_NAME $TEST_REPORT_FILE_PATH</string>
 				</dict>
 			</array>
 		</dict>
