--- a/Xcode Templates/iOS Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
+++ b/Xcode Templates/iOS Acceptance Testing Bundle.xctemplate/TemplateInfo.plist
@@ -5,7 +5,7 @@
 	<key>Macros</key>
 	<dict>
 		<key>POD_PLATFORM_IDENTIFIER</key>
-		<string>ios</string>
+		<string>ios, 9.0</string>
 	</dict>
 	<key>Kind</key>
 	<string>Xcode.Xcode3.ProjectTemplateUnitKind</string>
