--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,15 +1,15 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
 target 'OCSlimProject_AcceptanceTests' do
-  platform :ios, 8.0
-  pod "OCSlimProject", :path => "../"
+  platform :ios, 9.0
+  pod "OCSlimProject", :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "Release-1.3"
 end
 
 target 'OCSlimProject_AcceptanceTestsMac' do
-  platform :osx, 10.9
-  pod "OCSlimProject", :path => "../"
+  platform :osx, 10.8
+  pod "OCSlimProject", :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "Release-1.3"
 end
 
 target 'OCSlimProject_AcceptanceTests_UnitTestBundle' do
-    pod "OCSlimProjectTestBundleSupport", :path => "../"
+    pod "OCSlimProjectTestBundleSupport", :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "Release-1.3"
 end
