--- a/Example/Podfile
+++ b/Example/Podfile
@@ -10,6 +10,7 @@ target 'OCSlimProject_AcceptanceTestsMac' do
   pod "OCSlimProject", :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "Release-1.3"
 end
 
-target 'OCSlimProject_AcceptanceTests_UnitTestBundle' do
-    pod "OCSlimProjectTestBundleSupport", :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "Release-1.3"
-end
+target 'OCSlimProject_AcceptanceUnitTestBundle' do
+    platform :ios, 9.0
+    pod 'OCSlimProjectTestBundleSupport', :git => "https://github.com/paulstringer/OCSlimProject.git", :branch => "Release-1.3"
+ end
