--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 osx_image: xcode7.1
 xcode_sdk: iphonesimulator9.1
 xcode_workspace: Example/OCSlimProject.xcworkspace # path to your xcodeproj folder
-xcode_scheme: OCSlimProjectBuildTestAll
+xcode_scheme: OCSlimProject_Example
 
 
 ## DEFAULT TEMPLATE REFERENCE 
