--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 osx_image: xcode7.1
 xcode_sdk: iphonesimulator9.1
-xcode_workspace: Example/OCSlimProject.xcworkspace # path to your xcodeproj folder
-xcode_scheme: OCSlimProject_Example
+#xcode_workspace: Example/OCSlimProject.xcworkspace # path to your xcodeproj folder
+#xcode_scheme: OCSlimProject_Example
+- set -o pipefail && xcodebuild test -workspace Example/OCSlimProject.xcworkspace -scheme BuildTestAllAcceptanceTestTargets -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
+#- pod lib lint
 
 
 ## DEFAULT TEMPLATE REFERENCE 
