--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ osx_image: xcode7.1
 xcode_sdk: iphonesimulator9.1
 #xcode_workspace: Example/OCSlimProject.xcworkspace # path to your xcodeproj folder
 #xcode_scheme: OCSlimProject_Example
-- set -o pipefail && xcodebuild test -workspace Example/OCSlimProject.xcworkspace -scheme BuildTestAllAcceptanceTestTargets -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/OCSlimProject.xcworkspace -scheme BuildTestAllTargets-iOS -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
 #- pod lib lint
 
 
