--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 osx_image: xcode7.1
 xcode_sdk: iphonesimulator9.1
-#xcode_workspace: Example/OCSlimProject.xcworkspace # path to your xcodeproj folder
+xcode_workspace: Example/OCSlimProject.xcworkspace # path to your xcodeproj folder
 #xcode_scheme: OCSlimProject_Example
+script:
 - set -o pipefail && xcodebuild test -workspace Example/OCSlimProject.xcworkspace -scheme BuildTestAllTargets-iOS -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
 #- pod lib lint
 
