--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ before_install:
 osx_image: xcode7.1
 xcode_sdk: iphonesimulator9.1
 xcode_workspace: Example/OCSlimProject.xcworkspace # path to your xcodeproj folder
-#xcode_scheme: OCSlimProject_Example
-script:
-- set -o pipefail && xcodebuild test -workspace Example/OCSlimProject.xcworkspace -scheme BuildTestAllTargets-iOS -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
+xcode_scheme: BuildTestAllTargets-iOS
+#script:
+#- set -o pipefail && xcodebuild test -workspace Example/OCSlimProject.xcworkspace -scheme BuildTestAllTargets-iOS -sdk iphonesimulator9.1 ONLY_ACTIVE_ARCH=NO | xcpretty
 #- pod lib lint
 
 
