--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ osx_image: xcode7.3
 xcode_sdk: iphonesimulator9.3
 xcode_workspace: Example/OCSlimProject.xcworkspace # path to your xcodeproj folder
 xcode_scheme: BuildTestAllTargets-iOS
-#script:
+script:
 #- set -o pipefail && xcodebuild test -workspace Example/OCSlimProject.xcworkspace -scheme BuildTestAllTargets-iOS -sdk iphonesimulator9.1 ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme BuildTestAllTargets-iOS -sdk iphonesimulator9.3 build test
 #- pod lib lint
 
 
