--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ podfile: Example/Podfile
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 osx_image: xcode7.3
-xcode_sdk: iphonesimulator9.3
-xcode_workspace: Example/OCSlimProject.xcworkspace # path to your xcodeproj folder
-xcode_scheme: BuildTestAllTargets-iOS
+xcode_sdk: &xcsdk iphonesimulator9.3
+xcode_workspace: &xcw Example/OCSlimProject.xcworkspace # path to your xcodeproj folder
+xcode_scheme: &xcs BuildTestAllTargets-iOS
 script:
 #- set -o pipefail && xcodebuild test -workspace Example/OCSlimProject.xcworkspace -scheme BuildTestAllTargets-iOS -sdk iphonesimulator9.1 ONLY_ACTIVE_ARCH=NO | xcpretty
-- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme BuildTestAllTargets-iOS -sdk iphonesimulator9.3 build test
+- set -o pipefail && xctool -workspace *xcw -scheme *xcs -sdk *xcsdk build test
 #- pod lib lint
 
 
