--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,11 @@ before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 osx_image: xcode7.3
 script:
-- java -version
+- set -o pipefail && java -version
 - set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme BuildTestAllTargets-iOS -sdk  iphonesimulator build test
 - set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme BuildTestAllTargets-OSX -sdk  macosx build test
-#- pod lib lint
+- pod lib lint OCSlimProject.podspec --private
+- pod lib lint OCSlimProjectTestBundleSupport.podspec --private
 
 
 ## DEFAULT TEMPLATE REFERENCE 
