--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 osx_image: xcode7.3
 script:
 - set -o pipefail && java -version
-- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme BuildTestAllTargets-iOS -sdk  iphonesimulator build test
-- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme BuildTestAllTargets-OSX -sdk  macosx build test
-- pod lib lint OCSlimProject.podspec --allow-warnings
-- pod lib lint OCSlimProjectTestBundleSupport.podspec --use-libraries --allow-warnings
+- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -sdk  iphonesimulator build test
+#- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme BuildTestAllTargets-OSX -sdk  macosx build test
+#- pod lib lint OCSlimProject.podspec --allow-warnings
+#- pod lib lint OCSlimProjectTestBundleSupport.podspec --use-libraries --allow-warnings
