--- a/Example/OCSlimProject.xcodeproj/xcshareddata/xcschemes/OCSlimProject_Example.xcscheme
+++ b/Example/OCSlimProject.xcodeproj/xcshareddata/xcschemes/OCSlimProject_Example.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8C464DB21D59BD1F0000EF7B"
+               BuildableName = "OCSlimProject_AcceptanceUnitTestBundle.xctest"
+               BlueprintName = "OCSlimProject_AcceptanceUnitTestBundle"
+               ReferencedContainer = "container:OCSlimProject.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
@@ -43,8 +53,8 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
