--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,8 @@ before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 osx_image: xcode7.3
 script:
-- java -version
-# xctool doesn't support dynamic test suites, using xcodebuild instead.
-#- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -sdk  iphonesimulator build test
-- set -o pipefail && xcrun xcodebuild -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_Example -sdk  iphonesimulator -verbose build
+- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme OCSlimProject_AcceptanceTests -sdk iphonesimulator build
+
 #- set -o pipefail && xctool -workspace Example/OCSlimProject.xcworkspace -scheme BuildTestAllTargets-OSX -sdk  macosx build test
 #- pod lib lint OCSlimProject.podspec --allow-warnings
 #- pod lib lint OCSlimProjectTestBundleSupport.podspec --use-libraries --allow-warnings
