--- a/Example/OCSlimProject.xcodeproj/xcshareddata/xcschemes/BuildTestAllTargets-iOS.xcscheme
+++ b/Example/OCSlimProject.xcodeproj/xcshareddata/xcschemes/BuildTestAllTargets-iOS.xcscheme
@@ -24,8 +24,8 @@
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = ""
-      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
@@ -35,6 +35,16 @@
                BlueprintIdentifier = "8C464D831D59B9500000EF7B"
                BuildableName = "OCSlimProjectTestBundleSupportTests.xctest"
                BlueprintName = "OCSlimProjectTestBundleSupportTests"
+               ReferencedContainer = "container:OCSlimProject.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8C464DB21D59BD1F0000EF7B"
+               BuildableName = "OCSlimProject_AcceptanceUnitTestBundle.xctest"
+               BlueprintName = "OCSlimProject_AcceptanceUnitTestBundle"
                ReferencedContainer = "container:OCSlimProject.xcodeproj">
             </BuildableReference>
          </TestableReference>
